# solana-indexer-rs

./: .gitignore  README.md
block_indexer/: Cargo.toml
block_indexer/data/: moon_tx.json
block_indexer/js_src/sql/: block_json.sql  blocks.sql  diamond_hands.sql  early_trades.sql  holders.sql  holders_jsonb.sql  last_trades.sql  moonshot_data.sql  moonshot_price_bar.sql  moonshot_trade.sql  positions.sql  positions_full.sql  pump_data.sql  pump_price_bar.sql  pump_trade.sql  raydium_data.sql  raydium_price_bar.sql  raydium_trade.sql  transfers.sql  wallet_positions.sql
block_indexer/js_src/sql/events/: pump_complete_event.sql  pump_create_event.sql  pump_set_params_event.sql  pump_trade_event.sql  raydium_trade_event.sql
block_indexer/js_src/sql/experimental/: holders_zip.sql  last_trades_json.sql  last_trades_zip.sql  positions_full.sql  trades.sql  trades_mint.sql  trades_user.sql
block_indexer/js_src/src/: event.ts  indexer.ts  util.ts  verifier.ts
block_indexer/js_src/src/archiver/: archive.ts  archiver.ts
block_indexer/js_src/src/auxiliar/: moonshot.ts
block_indexer/js_src/src/commands/: manual-verifier.ts  moonshot-fetcher.ts
block_indexer/js_src/src/fetching/: block-indexer.ts  block-saver.ts  verification.ts
block_indexer/js_src/src/parsing/: block.parser.ts  instruction.parser.ts  transaction-log.parser.ts  transaction.parser.ts
block_indexer/src/: blockchain_data.rs  main.rs  moonshot.rs  moonshot_instruction.rs
block_indexer/src/moonshot/: instruction.rs
block_reader/: .env.template  Cargo.toml
block_reader/src/: main.rs
(+72 files in other folders)
