[package]
name = "block_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.35"
postgres = "0.19.0"
serde_json = "1.0.100"
reqwest = { version = "0.12.10", features = ["json"] }
solana-account-decoder = "2.1.7"
solana-client = "2.1.7"
solana-sdk = "2.1.7"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
spl-token-2022 = "4.0.0"
tokio = "1.42.0"
url = { version = "2.5.4", features = ["serde"] }
solana-transaction-status-client-types = "2.1.7"
dotenv = "0.15.0"
num-bigint = "0.4.1"
borsh = "1.5.5"
sha256 = "1.5.0"
num-traits = "0.2.19"
